added text from Fredrik and added /om_arcs template

--- a/app/static/css/landing-page.css
+++ b/app/static/css/landing-page.css
@@ -44,7 +44,12 @@ h6 {
  * Guld-gul #99803d
  */
 
+p.frontpagetext{
+  margin-top: 1rem;
+  margin-left: 8rem;
+  margin-right: 8rem;
 
+}
 
 header.masthead {
   position: relative;
