--- a/app/templates/medborgarforskning.html
+++ b/app/templates/medborgarforskning.html
@@ -59,6 +59,18 @@
 
 
 
+ <p class="frontpagetext">
+På senare år har det blivit allt vanligare att forskare och “vanligt folk” hjälps åt att undersöka olika frågor. Detta kallas för medborgarforskning (citizen science). Samarbetet leder inte bara till vetenskapliga framsteg, det ger även deltagarna möjlighet att engagera sig i frågor som intresserar dem, och skapar dialog mellan universitet och allmänheten.
+ <p>
+
+
+ <p class="frontpagetext">
+ I korthet går medborgarforskning ut på att forskare och frivilliga ”medborgare” tillsammans tar fram ny kunskap. Oftast är det forskare som tar hjälp av allmänheten för att samla in eller granska stora mängder data. Som deltagare kan man till exempel rapportera in observationer av växter, transkribera gamla handskrifter eller granska bilder på djur och natur. Ett av de mest välkända projekten är Galaxy Zoo där frivilliga hjälper astronomer att klassificera bilder av galaxer. Men medborgarforskning kan också vara initiativ från medborgare som använder vetenskapliga metoder för att göra sina röster hörda. Ett exempel är Louisiana Bucket Brigade i USA, där medborgare mäter luftkvalitet kring oljeindustrins anläggningar, och använder resultaten för att påverka beslutsfattare. I Sverige finns nu Luftdata.se som vill bygga och sprida billiga instrument för att mäta partikelhalter i luften. Här kan du läsa en intervju med Hannes Ebner, grundaren av Luftdata.se[b].
+ </p>
+
+ <p class="frontpagetext">
+Hittills har områden som biologi och miljöforskning varit mest aktiva när det gäller medborgarforskning, men det pågår en snabb utveckling även inom humaniora (t.ex. historia och litteraturvetenskap) och medicin. Den engelska termen för medborgarforskning är citizen science. Medborgarforskning inom samhällsvetenskaper och humaniora benämns ibland citizen social science respektive citizen humanities.
+ </p>
 
 
 
@@ -71,23 +83,46 @@
 
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('static/img/tree.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>En forskningsmetod</h2>
-          <p class="lead mb-0">Medborgarforskning är en viktig metod för att forskare ska kunna samla in och klassificera... lorem ipsum...läs mer...</p>
+          <h2>En nygammal revolution</h2>
+          <p>Att forskare och frivilliga hjälps åt med forskning är i sig inte något nytt – redan på 1750-talet startade Carl von Linné världens första nätverk för att rapportera lövsprickning. Det som har gjort att medborgarforskning på senare år blivit ett globalt fenomen är digitaliseringen och internet. Via datorer och mobiltelefoner kan nu vem som helst hjälpa forskare att bland annat mäta luftkvalitet, klassificera galaxer, räkna pingviner eller elefanter, transkribera brev från första världskriget, eller spela spel som samtidigt bidrar till vetenskapliga framsteg. Aldrig tidigare har det varit möjligt att engagera så många människor i forskning.
+	  </p>
+	  <p>
+Men medborgarforskning leder inte enbart till framsteg för forskningen, det påverkar till exempel även deltagarnas kunskaper, deras förtroende för vetenskap, och skapar en direkt relation mellan universitet och allmänheten.
+	  </p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('static/img/butterfly.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2>Påverkar och gör skillnad</h2>
-          <p class="lead mb-0">Hur är luftkvaliteten där du bor? Hur står det till med skogsmiljön? Medborgarforskning kan göra skillnad... läs mer...!</p>
-        </div>
+          <h2>Medborgarforskning i Sverige</h2>
+      
+	  <p>
+	  Sverige har en lång tradition av samarbeten mellan forskare och frivilliga. Vi vet att svenska forskare åtminstone sedan 1850-talet har fått hjälp med observationer och klassificering av bland annat väder, fåglar och astronomiska fenomen. Ett modernt exempel är Artportalen hos Sveriges lantbruksuniversitet (SLU), som är en av de största portalerna för medborgarforskning i världen. Här kan du läsa en intervju med Artportalens koordinator Stephen Coulson, där han berättar mer om portalen. 
+	  </p>
+         
+          <p>
+Sedan 2009 koordinerar den ideella organisationen Vetenskap &amp; Allmänhet årligen ett medborgarforskningsprojekt för Sveriges skolor – ForskarFredags Massexperiment. I massexperimenten har tiotusentals elever hjälpt forskare att ta fram ny kunskap inom en mängd olika områden. Här berättar Christopher Kullenberg vid Göteborgs universitet om 2016 års massexperiment, där elever hjälpte forskare kartlägga innehållet på analoga anslagstavlor runtom i Sverige. 
+          </p>
+	
+
+
+
+	</div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('static/img/mountain.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Kan vara ett intressant skolprojekt</h2>
-          <p class="lead mb-0">Runt om i landet bedriver hundratals skolor och tusentals elever medborgarforskning... läs mer...</p>
-        </div>
+          <h2>Möjligheter och utmaningar</h2>
+             <p>
+Medborgarforskning erbjuder stora möjligheter för allmänheten att delta i och själva starta forskningsprojekt istället för att bara informeras om färdiga forskningsresultat. När relationen fungerar som bäst skapar medborgarforskning samverkan och innovationer som berikar forskningen och stimulerar dialog mellan medborgarna och universiteten.
+
+Utmaningar med medborgarforskning för framtiden är till exempel: Hur kan forskarna veta att medborgarnas bidrag går att lita på? Hur ska ny teknik användas? På vilka sätt värnar man etiska frågor, och hur fördelas roller och rättigheter mellan forskare och frivilliga?
+
+            </p>
+    
+
+
+    </div>
       </div>
     </div>
   </section>
@@ -153,7 +188,7 @@
         <div class="col-lg-8 h-100 text-center text-lg-left my-auto">
           <ul class="list-inline mb-2">
             <li class="list-inline-item">
-		    <b><a href="#">Om portalen</a></b><br>
+		    <b><a href="/om_arcs">Om ARCS</a><br>
 		    <a href="#">Bakgrund</a><br>
 		    <a href="#">Kontakt</a><br>
 		    <a href="#">Press</a><br>
