--- a/app/templates/startaprojekt.html
+++ b/app/templates/startaprojekt.html
@@ -177,7 +177,7 @@
         <div class="col-lg-8 h-100 text-center text-lg-left my-auto">
           <ul class="list-inline mb-2">
             <li class="list-inline-item">
-		    <b><a href="#">Om portalen</a></b><br>
+		    <b><a href="/om_arcs">Om ARCS</a><br>
 		    <a href="#">Bakgrund</a><br>
 		    <a href="#">Kontakt</a><br>
 		    <a href="#">Press</a><br>
