fixed /literature to search by year or author

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -199,7 +199,7 @@ Du som inte är forskare kan: göra precis samma saker som forskarna. Medborgarf
 		    <a href="#">&zwnj;</a>
             </li>
             <li class="list-inline-item">
-		    <b><a href="#">Vetenskaplig litteratur</a></b><br>
+		    <b><a href="/litteratur">Vetenskaplig litteratur</a></b><br>
 		    <a href="#">Om medborgarforskning</a><br>
 		    <a href="#">Om datakvalitet</a><br>
 		    <a href="#">Om teknikimplementering</a><br>
