--- a/app/static/css/landing-page.css
+++ b/app/static/css/landing-page.css
@@ -44,6 +44,16 @@ h6 {
  * Guld-gul #99803d
  */
 
+
+table{
+  font-size: 12px;
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
+
+tr:hover {background-color: #f5f5f5;}
+tr:nth-child(even) {background-color: #f2f2f2;}
+
 p.frontpagetext{
   font-family: 'Roboto', sans-serif;
   margin-top: 1rem;
