--- a/app/templates/medborgarforskning.html
+++ b/app/templates/medborgarforskning.html
@@ -196,7 +196,7 @@ Utmaningar med medborgarforskning för framtiden är till exempel: Hur kan forsk
 		    <a href="#">&zwnj;</a>
             </li>
             <li class="list-inline-item">
-		    <b><a href="#">Vetenskaplig litteratur</a></b><br>
+		    <b><a href="/litteratur">Vetenskaplig litteratur</a></b><br>
 		    <a href="#">Om medborgarforskning</a><br>
 		    <a href="#">Om datakvalitet</a><br>
 		    <a href="#">Om teknikimplementering</a><br>
