--- a/app/templates/om_arcs.html
+++ b/app/templates/om_arcs.html
@@ -91,7 +91,7 @@ Projektledare är Dick Kasperowski, docent i vetenskapsteori vid Göteborgs univ
 		    <a href="#">&zwnj;</a>
             </li>
             <li class="list-inline-item">
-		    <b><a href="#">Vetenskaplig litteratur</a></b><br>
+		    <b><a href="/litteratur">Vetenskaplig litteratur</a></b><br>
 		    <a href="#">Om medborgarforskning</a><br>
 		    <a href="#">Om datakvalitet</a><br>
 		    <a href="#">Om teknikimplementering</a><br>
