--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,8 +16,8 @@
   <!-- Custom fonts for this template -->
   <link href="/static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="/static/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
+  <link rel="stylesheet"
+	href="https://fonts.googleapis.com/css?family=Raleway|Roboto">
   <!-- Custom styles for this template -->
   <link href="/static/css/landing-page.css" rel="stylesheet">
 
@@ -54,8 +54,7 @@
 				
 				<div class="row">
 	  	
-					Visa 
-
+						Visa
     				<div class="col-auto">
       					<select class="form-control-lg" id="research_area" name="typeofproject" onchange="this.form.submit();">
 					        
@@ -127,16 +126,16 @@
   </header>
 
 
-  <p class="frontpagetext">
+<p class="lead">
 Medborgarforskning handlar om att forskare och allmänheten hjälps åt för att ta fram ny kunskap. På medborgarforskning.se kan alla som vill lära sig mer om medborgarforskning (citizen science), söka bland projekt att delta i och bidra till portalen med egna kunskaper och erfarenheter.
   </p>
 
 
-  <p class="frontpagetext">
+  <p class="lead">
   Du som är forskare kan: hitta information om medborgarforskning som metod, få tips och inspiration till att starta egna projekt, utbyta erfarenheter och knyta kontakter med andra forskare och frivilliga.
   </p>
 
-  <p class="frontpagetext">
+  <p class="lead">
 Du som inte är forskare kan: göra precis samma saker som forskarna. Medborgarforskning är för alla.
   </p>
 
