--- a/app/templates/medborgarforskning.html
+++ b/app/templates/medborgarforskning.html
@@ -16,7 +16,8 @@
   <!-- Custom fonts for this template -->
   <link href="/static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="/static/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Raleway|Roboto">
 
   <!-- Custom styles for this template -->
   <link href="/static/css/landing-page.css" rel="stylesheet">
