--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -125,20 +125,23 @@
     </div>
   </header>
 
+<div class="container">
+<div class="row justify-content-md-center">
 
-<p class="lead">
-Medborgarforskning handlar om att forskare och allmänheten hjälps åt för att ta fram ny kunskap. På medborgarforskning.se kan alla som vill lära sig mer om medborgarforskning (citizen science), söka bland projekt att delta i och bidra till portalen med egna kunskaper och erfarenheter.
+  <p>
+   Medborgarforskning handlar om att forskare och allmänheten hjälps åt för att ta fram ny kunskap. På medborgarforskning.se kan alla som vill lära sig mer om medborgarforskning (citizen science), söka bland projekt att delta i och bidra till portalen med egna kunskaper och erfarenheter.
   </p>
 
-
-  <p class="lead">
+  <p>
   Du som är forskare kan: hitta information om medborgarforskning som metod, få tips och inspiration till att starta egna projekt, utbyta erfarenheter och knyta kontakter med andra forskare och frivilliga.
   </p>
 
-  <p class="lead">
+  <p>
 Du som inte är forskare kan: göra precis samma saker som forskarna. Medborgarforskning är för alla.
   </p>
-
+ 
+  </div>
+</div>
 
   <!-- result grid -->
 
@@ -183,39 +186,60 @@ Du som inte är forskare kan: göra precis samma saker som forskarna. Medborgarf
 
 
 
-  <!-- Footer -->
-  <footer class="footer bg-light">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 h-100 text-center text-lg-left my-auto">
-          <ul class="list-inline mb-2">
-            <li class="list-inline-item">
-		    <a href="/om-arcs">Om ARCS</a><br>
-		    <a href="#">Bakgrund</a><br>
-		    <a href="#">Kontakt</a><br>
-		    <a href="#">Press</a><br>
-		    <a href="#">&zwnj;</a><br>
-		    <a href="#">&zwnj;</a>
-            </li>
-            <li class="list-inline-item">
-		    <b><a href="/litteratur">Vetenskaplig litteratur</a></b><br>
-		    <a href="#">Om medborgarforskning</a><br>
-		    <a href="#">Om datakvalitet</a><br>
-		    <a href="#">Om teknikimplementering</a><br>
-		    <a href="#">Om etik</a><br>
-		    <a href="#">Om kommunikation</a>
-            </li>
-            <li class="list-inline-item">
-		    <b><a href="#">För forskare</a></b><br>
-	      <a href="#">Standardisering och datakvalitet</a><br>
-	      <a href="#">Teknikimplementering</a><br>
-	      <a href="#">Etik</a><br>
-	      <a href="#">Kommunikation</a></br>
-	      <a href="#">&zwnj;</a>
+	   
+ 
+   <!-- Marketing Icons Section -->
+    <div class="row">
+      <div class="col-lg-4 mb-4">
+        <div class="card h-100">
+          <h4 class="card-header">Om ARCS</h4>
+          <div class="card-body">
+            <p class="card-text">
+                    <a href="/om_arcs">Bakgrund</a><br>
+                    <a href="#">Kontakt</a><br>
+                    <a href="#">Press</a><br>
 
-            </li>
-
+            </p>	    
+          </div>
+          <!-- <div class="card-footer">
+            <a href="#" class="btn btn-primary">Learn More</a>
+	  </div> -->
+        </div>
+      </div>
+      <div class="col-lg-4 mb-4">
+        <div class="card h-100">
+          <h4 class="card-header">Vetenskaplig litteratur</h4>
+          <div class="card-body">
+            <p class="card-text">
+	             
+                    <a href="/litteratur">Om medborgarforskning</a><br>
 	    
+	    </p> 
+          </div>
+          <!-- <div class="card-footer">
+            <a href="#" class="btn btn-primary">Learn More</a>
+	  </div> -->
+        </div>
+      </div>
+      <div class="col-lg-4 mb-4">
+        <div class="card h-100">
+          <h4 class="card-header">För forskare</h4>
+          <div class="card-body">
+            <p class="card-text">
+              <a href="#">Standardisering och datakvalitet</a><br>
+              <a href="#">Teknikimplementering</a><br>
+              <a href="#">Etik</a><br>
+              <a href="#">Kommunikation</a></br>
+ 
+	    </p>  
+          </div>
+         <!-- <div class="card-footer">
+            <a href="#" class="btn btn-primary">Learn More</a>
+	 </div>-->
+        </div>
+      </div>
+    </div>
+<!-- /.row -->
 	    
 <style>
 .copyleft {
