where I was on tuesday

--- a/ArcsSystem/templates/blog/blog_list.html
+++ b/ArcsSystem/templates/blog/blog_list.html
@@ -3,19 +3,20 @@
 {% load i18n %}
 
 {% block content %}
+{{ blog_title }}
 
 
-{% for b in blog %}
-<p>b.title</p>
+<p> hello</p>
+
+
+{% for post in object_list %}
+
+{{ object.title }}
 
 {% endfor %}
 
-{% for b in blog %}
-<p>{{b}}</p>
-
-{% endfor %}
 
 
-{{blog_title}}
+
 
 {% endblock content %}
