got listview and detailview to work for the blog app

--- a/ArcsSystem/templates/blog/blog_detail.html
+++ b/ArcsSystem/templates/blog/blog_detail.html
@@ -5,6 +5,9 @@
 
 {# this tag will insert a comment in the HMTL, but won't be rendered #}
 
-<p> Did this replace (now we are at blog_detail.html)</p>
+<h1>{{ object.title }}</h1>
+<p>{{ object.content }}</p>
+
+
 
 {% endblock content %}
