--- a/ArcsSystem/templates/base.html
+++ b/ArcsSystem/templates/base.html
@@ -1,43 +1,37 @@
-{% load static %}{% load i18n %}{% load menu_tags %}<!DOCTYPE HTML>
+{% load static %}{% load i18n %}{% load account %}{% load menu_tags %}<!DOCTYPE HTML>
 <html lang="en"> <!-- TODO replace "en" with django template for language -->
 	<header role="banner">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 		<meta name="Description" content="Medborgarforskning.se - Den svenska portalen för medborgarforskning">
 		<!-- TODO Insert django tag for additional page metadata fields -->
-
 		<link href="{% static 'css/base-style.css' %}" rel="stylesheet">
 		<link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
 		<!-- TODO Insert django tag for additional scripts for the page-->
-
 		<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Lato|Playfair+Display&display=swap" rel="stylesheet" /> <!--TODO change to serve locally as it does not support integrity hash-->
-		<title>Medborgarforskning.se</title> <!-- TODO replace "Medborgarforskning.se" with django template for the page title -->
+		<title>{% block title %}Medborgarforskning.se {% endblock title %}</title> <!-- TODO replace "Medborgarforskning.se" with django template for the page title -->
 	</header>
-
 	<!-- Load main nave as template include. -->
 	{% main_menu template="nav_main.html" %} <!-- TODO investigate why Pages don't display in the Menu, but static links do via Wagtail Admin -->
 	<!-- open body of page -->
-
 	<body>
-	  {% block content %}
-		<h1> Medborgarforskning.se!</h1>
-		<p> This base.html block should be replaced by a template defined block.
-
-	  {% endblock content %}
-		<!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+			<main id="content">{# Contents of Main are for the main target of the page. #}
+	  	{% block content %}
+			<h1> Medborgarforskning.se!</h1>
+			<p> This base.html block should be replaced by a template defined block.
+	  	{% endblock content %}
+			</main>
+			<!-- Optional JavaScript -->
+    	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	</body>
-
 	<footer>
 		<nav id="footer-nav" aria-label="Footer">
 			<!-- list of links to about and other reference and contact -->
 		</nav>
-
   </footer>
-
 </html>
