got pagination to work in blog app

--- a/ArcsSystem/templates/blog/blog_list.html
+++ b/ArcsSystem/templates/blog/blog_list.html
@@ -8,8 +8,29 @@
 
 {% for instance in object_list %}
     <p>{{ instance.id }} - <a href='{{ instance.get_absolute_url }}'>{{ instance.title}}, {{ instance.published }}</a></p>
-
 {% endfor %}
+
+
+
+
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
+
 
 
 
