--- a/ArcsSystem/templates/blog/post_archive.html
+++ b/ArcsSystem/templates/blog/post_archive.html
@@ -4,10 +4,10 @@
 
 {% block content %}
 
-<h1>Blog home page (list view)</h1>
+<h1>{% trans Blog home page (list view) }</h1>
 
 {% for instance in object_list %}
-    <p>{{ instance.id }} - <a href='{{ instance.get_absolute_url }}'>{{ instance.title}}, {{ instance.published }}</a></p>
+    <p>{{ instance.id }} - <a href='{{ instance.get_absolute_url }}'>{% trans {{ instance.title}} }, {{ instance.published }}</a></p>
 {% endfor %}
 
 
