--- a/ArcsSystem/templates/blog/post_detail.html
+++ b/ArcsSystem/templates/blog/post_detail.html
@@ -1,3 +1,3 @@
-<h1>{{ object.title }}</h1>
+<h1>{% trans {{ object.title }} }</h1>
 
-<p>{{ object.content }}</p>
+<p>{% trans {{ object.content }} }</p>
