--- a/ArcsSystem/templates/blog/blog_list.html
+++ b/ArcsSystem/templates/blog/blog_list.html
@@ -4,14 +4,16 @@
 
 {% block content %}
 
-<h1>Blog home page (list view)</h1>
+<h1>{% trans "Blog home page (list view)" %}</h1>
 
 {% for instance in object_list %}
     <p>{{ instance.id }} - <a href='{{ instance.get_absolute_url }}'>{{ instance.title}}, {{ instance.published }}</a></p>
 {% endfor %}
 
 
-
+<h3>
+{% trans "Blog detail view" %}
+</h3>
 
 <div class="pagination">
     <span class="step-links">
@@ -25,8 +27,8 @@
         </span>
 
         {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">next</a>
-            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            <a href="?page={{ page_obj.next_page_number }}">{% trans "next" %}</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">{% trans "last" %} &raquo;</a>
         {% endif %}
     </span>
 </div>
