made simple form search work

--- a/ArcsSystem/templates/projects/project_list.html
+++ b/ArcsSystem/templates/projects/project_list.html
@@ -5,6 +5,12 @@
 
 {% block content %}
 
+
+<form action="{% url 'search_results' %}" method="get">
+  <input name="q" type="text" placeholder="Search...">
+</form>
+
+
 {% for project in object_list %}
 <div class="post-entry">
 <h2><a href="{% url 'project_detail' project.pk %}">{{ project.name }}</a></h2>
