- updae home.html and base.html for login links display across all base.html - removed nav_menu.html template from wagtail

--- a/ArcsSystem/templates/base.html
+++ b/ArcsSystem/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}{% load i18n %}{% load account %}{% load menu_tags %}<!DOCTYPE HTML>
 <html lang="en"> <!-- TODO replace "en" with django template for language -->
-	<header role="banner">
+	<head role="banner">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 		<meta name="Description" content="Medborgarforskning.se - Den svenska portalen för medborgarforskning">
@@ -11,18 +11,46 @@
 		<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Lato|Playfair+Display&display=swap" rel="stylesheet" /> <!--TODO change to serve locally as it does not support integrity hash-->
-		<title>{% block title %}Medborgarforskning.se {% endblock title %}</title> <!-- TODO replace "Medborgarforskning.se" with django template for the page title -->
-	</header>
-	<!-- Load main nave as template include. -->
-	{% main_menu template="nav_main.html" %} <!-- TODO investigate why Pages don't display in the Menu, but static links do via Wagtail Admin -->
+		<title>{% block head_title %}Medborgarforskning.se{% endblock %}</title> <!-- TODO replace "Medborgarforskning.se" with django template for the page title -->
+    {% block extra_head %}
+    {% endblock %}
+	</head>
 	<!-- open body of page -->
 	<body>
+		{% block body %}
+
+		{% if messages %}
+		<div>
+			<strong>Messages:</strong>
+			<ul>
+				{% for message in messages %}
+				<li>{{message}}</li>
+				{% endfor %}
+			</ul>
+		</div>
+		{% endif %}
+
+		<div>
+			{% if user.is_authenticated %}
+			  Hi {{ user.username }}!
+			  <p><a href="{% url 'account_logout' %}">Sign Out</a></p>
+			{% else %}
+			  <a href="{% url 'account_login' %}">Sign In</a> |
+			  <a href="{% url 'account_signup' %}">Sign Up</a>
+			{% endif %}
+		</div>
 			<main id="content">{# Contents of Main are for the main target of the page. #}
+
 	  	{% block content %}
 			<h1> Medborgarforskning.se!</h1>
 			<p> This base.html block should be replaced by a template defined block.
 	  	{% endblock content %}
 			</main>
+			{% endblock body %}
+			<!-- allauth base.html -->
+			{% block extra_body %}
+	    {% endblock %}
+			<!-- End allauth base.html -->
 			<!-- Optional JavaScript -->
     	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
