--- a/ArcsSystem/templates/publications/article_publications_list.html
+++ b/ArcsSystem/templates/publications/article_publications_list.html
@@ -13,7 +13,7 @@
 
 {% for article in object_list %}
 <div class="post-entry">
-<h2><a href="{{ article.pk }}">{{ article.title }}</a></h2>
+<h2><a href="{{ article.pk }}">{{ article.py }}. {{ article.title }}</a></h2>
 
 </div>
 {% endfor %}
