--- a/ArcsSystem/static/css/base-style.css
+++ b/ArcsSystem/static/css/base-style.css
@@ -45,3 +45,50 @@ p.bold {
   font-style: bold;
   color: #000000;
 }
+
+body {
+  background-color: #C3D3D0 !important;
+}
+
+#header-main-logo {
+  margin: 30px;
+}
+
+.header-icons {
+  width: 25px;
+}
+
+.header-main-menu {
+  background-color: #255C61;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.main-menu-buttons {
+  font-family: Lato;
+  font-style: bold;
+  color: #FFFFFF;
+}
+
+.has-search .form-control {
+    padding-left: 2.375rem;
+}
+
+.form-group.has-search{
+  margin-bottom: 0;
+}
+
+.has-search .form-control-feedback {
+    position: absolute;
+    z-index: 2;
+    display: block;
+    width: 2.375rem;
+    height: 2.375rem;
+    line-height: 2.375rem;
+    text-align: center;
+    pointer-events: none;
+    color: #aaa;
+    padding: 10px;
+}
