--- a/ArcsSystem/templates/base.html
+++ b/ArcsSystem/templates/base.html
@@ -1,9 +1,9 @@
 {% load static %}{% load i18n %}{% load account %}{% load menu_tags %}<!DOCTYPE HTML>
-<html lang="en"> <!-- TODO replace "en" with django template for language -->
+<html lang="{{ LANGUAGE_CODE }}">
 	<head role="banner">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<meta name="Description" content="Medborgarforskning.se - Den svenska portalen för medborgarforskning">
+		<meta name="Description" content="{% trans "Medborgarforskning.se - The Swedish portal for citizen science." %}">
 		<!-- TODO Insert django tag for additional page metadata fields -->
 		<link href="{% static 'css/base-style.css' %}" rel="stylesheet">
 		<link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
@@ -17,6 +17,63 @@
 	</head>
 	<!-- open body of page -->
 	<body>
+		<!--<header-->
+		<div class="row">
+			<div class="col d-flex justify-content-center align-items-center" >
+				<div class="row">
+					<div class="col">
+						<img class="header-icons" src="{% static 'icons/Facebook_Brands_Icon_4.png' %}"/>
+					</div>
+					<div class="col">
+						<img class="header-icons" src="{% static 'icons/Linkedin_Brands_Icon_4.png' %}"/>
+					</div>
+					<div class="col">
+						<img class="header-icons" src="{% static 'icons/Instagram_Brands_Icon_4.png' %}"/>
+					</div>
+					<div class="col">
+						<img class="header-icons" src="{% static 'icons/Twitter_Square_Brands_Icon_4.png' %}"/>
+					</div>
+				</div>
+			</div>
+			<div id="header-main-logo" class="col d-flex justify-content-center align-items-center">
+				<img src="{% static 'icons/medborgarforskning-C-1000px_1.png' %}"/>
+			</div>
+			<div class="col d-flex justify-content-center align-items-center">
+				<div class="row">
+				<div class="col">
+					<img class="header-icons" src="{% static 'icons/Language_Icon_4.png' %}"/>
+				</div>
+				<div class="col">
+					<img class="header-icons" src="{% static 'icons/Hearing_Icon_3.png' %}"/>
+				</div>
+				<div class="col">
+					<img class="header-icons" src="{% static 'icons/Account_Circle_Icon_5.png' %}"/>
+				</div>
+			</div>
+		</div>
+		</div>
+		<div class="row header-main-menu">
+			<div class="col main-menu-buttons d-flex justify-content-center align-items-center text-center">
+				GETTING STARTED WITH CITIZEN SCIENCE
+			</div>
+			<div class="col main-menu-buttons d-flex justify-content-center align-items-center text-center">
+				CITIZEN SCIENCE IN PRACTICE
+			</div>
+			<div class="col main-menu-buttons d-flex justify-content-center align-items-center text-center">
+				CITIZEN SCIENCE IN SWEDEN
+			</div>
+			<div class="col d-flex justify-content-center align-items-center">
+				<!-- Actual search box -->
+				<div class="form-group has-search">
+					<svg class="form-control-feedback" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+					  <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z" clip-rule="evenodd"/>
+					  <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z" clip-rule="evenodd"/>
+					</svg>
+					<input type="text" class="form-control" placeholder="Search">
+				</div>
+			</div>
+		</div>
+
 		{% block body %}
 
 		{% if messages %}
@@ -32,18 +89,19 @@
 
 		<div>
 			{% if user.is_authenticated %}
-			  Hi {{ user.username }}!
+			  {% trans "Hi" %} {{ user.username }}!
 			  <p><a href="{% url 'account_logout' %}">Sign Out</a></p>
 			{% else %}
-			  <a href="{% url 'account_login' %}">Sign In</a> |
-			  <a href="{% url 'account_signup' %}">Sign Up</a>
+			  <a href="{% url 'account_login' %}">{% trans "Sign In" %}</a> |
+			  <a href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a>
 			{% endif %}
 		</div>
+
 			<main id="content">{# Contents of Main are for the main target of the page. #}
 
 	  	{% block content %}
-			<h1> Medborgarforskning.se!</h1>
-			<p> This base.html block should be replaced by a template defined block.
+			<h1>{% trans "Medborgarforskning.se!" %}</h1>
+			<p>{% trans "This base.html block should be replaced by a template defined block." %}
 	  	{% endblock content %}
 			</main>
 			{% endblock body %}
@@ -56,6 +114,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
 	</body>
 	<footer>
 		<nav id="footer-nav" aria-label="Footer">
